2008-05-27  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* various: some 64-bit and/or gcc 4.1 compilation fixes
	* objs/chunks.cc: delete[] vs delete
	* various: initialize some variables

2008-05-26    <jeff@mini.nerble.net>

	* objs/objs.cc: In SI, fire-damage destroys ice wall and blocks,
	so you can free Gwenno.

2008-05-23    <jeff@mini.nerble.net>

	* shapes/miscinf.cc: Don't infinite loop if animated object has
	been rotated.

	* objs/barge.cc (Barge_object): Changed criteria for gathering
	'barge' objects so flags aren't caught (but the ice-raft still works).

2008-05-03    <jeff@mini.nerble.net>

	* effects.cc (Projectile_effect): Fixed crash involving trap.

2008-04-14    <jeff@mini.nerble.net>

	* objs/chunks.cc (Chunk_cache): The 'blocking' detection now
	handles lifts >= 15, and should save a bit of memory for chunks
	with lifts < 8.

	* objs/citerate.h (public): Fixed bug when size is 1x1.

2008-03-30    <jeff@mini.nerble.net>

	* cheat.cc, etc: Support higher lifts, up to 255.  Note that the
	file formats still need to change for this to fully work.

2008-03-21	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* exultmenu.cc: Was missing in previous commit; updated mod manager to use
	  vectors and classes instead of pointer to vectors and classes.
	* All: Fixed default game directory to be the Exult.cfg-defined game name.

2008-03-20	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* studio.cc: Fixed long-standing mod-manager crash.
	* all: Updated/reformatted mod manager files to use vectors and classes
	  instead of pointer to vectors and classes. Improved default game directory
	  to be the Exult.cfg-defined game name (e.g., BG and SI have default dirs
	  './blackgate' and './serpentisle'). Some readmes were updated accordingly.

2008-03-15	Marzo Sette Torres Junior <marzojr@yahoo.com>
	Fixing bug that caused reserved NPC #356 to be available when creating
	a new NPC.

2008-02-26	Marzo Sette Torres Junior <marzojr@yahoo.com>