@@ -1,3 +1,10 @@
+2008-05-28	Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* objs/objs.cc: Removed fire-vs-ice effect previously introduced.
+	* usecode/intrinsics.cc: Fixed powder-keg-as-weapon case of attack_object
+	  intrinsic to behave as the original does; incidentaly, this fixes the
+	  gwani horn. This is a temporary workaround, until attacks and intrinsics
+	  are "properly" fixed to behave like the originals.
+
 2008-05-27  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* various: some 64-bit and/or gcc 4.1 compilation fixes
 	* objs/chunks.cc: delete[] vs delete
